--- a/index.html
+++ b/index.html
@@ -5,7 +5,62 @@
     <title>HTML Academy: Нёрдс</title>
   </head>
   <body>
-
+    <header class="main-header">
+      <nav class="main-navigation">
+          <a class="main-header-logo">
+        <img src="img/index-logo.svg" width="368" height="153"
+        alt="Логотип студии НЕРДС">
+          </a>
+        <ul class="site-navigation">
+          <li><a href="studio.html">Информация</a></li>
+          <li><a href="clients.html">Клиенты</a></li>
+          <li><a href="shop.html">Магазин</a></li>
+          <li><a href="contacts.html">Контакты</a></li>
+        </ul>
+        <ul class="user-navigation">
+          <li class="basket">Корзина</li>
+        </ul>
+      </nav>
+    </header>
+    <main class="basic">
+      <section class="amenities">
+        <h2 class="visually-hidden"> Услуги</h2>
+        <ul class="amenities-list">
+          <li><a class="button" href="web-sites.html">Веб-сайты</a></li>
+          <li><a class="button" href="aplicftions.html">Приложения</a></li>
+          <li><a class="button" href="presentation">Презентации</a></li>
+        </ul>
+      </section>
+      <section>
+        <b class="slogan">
+          Мы маленькая, но гордая студия из Краснодара
+        </b>
+        <p>Исповедуем принципы минимализма и чистоты. Ставим математический
+          расчет превыше креатива. Работаем не покладая рук, как роботы.
+        </p>
+        <b class="static">
+          C 2004 года любим точность во всем:
+          <ul>
+            <li>Уровень самоотдачи:146%</li>
+          <li>Соблюдение сроков:100%</li>
+          <li>Минимальная предоплата:50%</li>
+        </ul>
+      </b>
+      </section>
+      <footer class="main-footer">
+<p class="contacts">
+  Дизайн-Студия "Нердс" <br>
+  Адрес: г. Санкт-петербург, ул. Б.Конюшенная, д.19/8
+  Телефон: +7 (812) 275-75-75
+</section>
+    </main>
+  <div class="footer-social">
+    <b> Давай дружить, это выгодно!</b>
+    <a class="social-button">href="#">Вконтакте</a>
+    <a class="social-button">href="#">Фейсбук</a>
+    <a class="social-button">href="#">Инстаграмм</a>
+  </div>
+   </footer>
     <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
 
   </body>
