--- a/catalog.html
+++ b/catalog.html
@@ -35,7 +35,7 @@
           <li class="catalog-item">
             <h3>
               <a href="catalog-item.html">
-              <span class="catalog-item-title"> SEDONA</span>
+              <span class="catalog-item-title">SEDONA</span>
               <span class="catalg-category">Информационный сайт для туристов</span>
               </a>
            </h3>
@@ -60,7 +60,7 @@
                 <img src="img/pink.jpg" width="220" height="165" alt="Сайт приложения PINK">
               </a>
             </p>
-            <a class="buttom" href="#">
+            <a class="button" href="#">
               9 900 РУБ
             </a>
           </li>
@@ -135,7 +135,7 @@
         <li class="pagination-list"><a href="#">3</a></li>
       </ul>
     </section>
-  </main>
+  <main>
   <footer class="main-footer">
   <p class="contacts">
   Дизайн-Студия "Нердс" <br>
@@ -143,7 +143,7 @@
   Телефон: +7 (812) 275-75-75
   </main>
   <div class="footer-social">
-  <b> Давай дружить, это выгодно!</b>
+  <h2> Давай дружить, это выгодно!</h2>
   <a class="social-button"href="#">Вконтакте</a>
   <a class="social-button"href="#">Фейсбук</a>
   <a class="social-button"href="#">Инстаграмм</a>
