--- a/catalog.html
+++ b/catalog.html
@@ -135,6 +135,7 @@
         <li class="pagination-list"><a href="#">3</a></li>
       </ul>
     </section>
+  </main>
   <footer class="main-footer">
   <p class="contacts">
   Дизайн-Студия "Нердс" <br>
