--- a/index.html
+++ b/index.html
@@ -38,15 +38,16 @@
         <p>Исповедуем принципы минимализма и чистоты. Ставим математический
           расчет превыше креатива. Работаем не покладая рук, как роботы.
         </p>
-        <b class="static">
+        <div class="static">
           C 2004 года любим точность во всем:
           <ul>
             <li>Уровень самоотдачи:146%</li>
           <li>Соблюдение сроков:100%</li>
           <li>Минимальная предоплата:50%</li>
         </ul>
-      </b>
+      </div>
       </section>
+</main>
       <footer class="main-footer">
 <p class="contacts">
   Дизайн-Студия "Нердс" <br>
@@ -59,7 +60,7 @@
     <a class="social-button">href="#">Инстаграмм</a>
   </div>
    </footer>
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
 
   </body>
 </html>
