--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
     <header class="main-header">
       <nav class="main-navigation">
           <a class="main-header-logo">
-        <img src="img/index-logo.svg" width="368" height="153"
+        <img src="img/nerds-logo.svg" width="160" height="65"
         alt="Логотип студии НЕРДС">
           </a>
         <ul class="site-navigation">
@@ -36,12 +36,11 @@
             <h3>
               <a href="catalog-item.html">
               <span class="catalog-item-title">SEDONA</span>
-              <span class="catalg-category">Информационный сайт для туристов</span>
               </a>
            </h3>
            <p class="catalog-item-image">
              <a href="catalog-item.html">
-             <img src="img/sedona.jpeg" width="220" height="165" alt="Информационный сайт для туристов SEDONA">
+               <img src="img/sedona.jpg" width="360" height="576" alt="Информационный сайт для туристов SEDONA">
            </a>
          </p>
            <a class="button" href="#">
@@ -57,7 +56,7 @@
             </h3>
             <p class="catalog-item-image">
               <a href="catalog-item.html">
-                <img src="img/pink.jpg" width="220" height="165" alt="Сайт приложения PINK">
+                <img src="img/pink.jpg" width="360" height="576" alt="Сайт приложения PINK">
               </a>
             </p>
             <a class="button" href="#">
@@ -73,7 +72,7 @@
             </h3>
             <p class="catalog-item-image">
               <a href="catalog-item.html">
-                <img src="img/boroda.jpg" width="220" height="165" alt="Сайт барбершопа Бородинский">
+                <img src="img/boroda.jpg" width="360" height="576" alt="Сайт барбершопа Бородинский">
               </a>
             </p>
             <a class="buttom" href="#">
@@ -89,7 +88,7 @@
           </h3>
           <p class="catalog-item-image">
             <a href="catalog-item.html">
-              <img src="img/mishki.jpg" width="220" height="165" alt="Милые штучки ручной работы для дома">
+              <img src="img/mishki.jpg" width="360" height="576" alt="Милые штучки ручной работы для дома">
             </a>
           </p>
           <a class="buttom" href="#">
@@ -105,7 +104,7 @@
           </h3>
           <p class="catalog-item-image">
             <a href="catalog-item.html">
-              <img src="img/teacher.jpg" width="220" height="165" alt="Сайт для учебного заведения">
+              <img src="img/teacher.jpg" width="360" height="576" alt="Сайт для учебного заведения">
             </a>
           </p>
           <a class="buttom" href="#">
@@ -121,7 +120,7 @@
           </h3>
           <p class="catalog-item-image">
             <a href="catalog-item.html">
-              <img src="img/kvast.jpg" width="220" height="165" alt="Сайт для любителей крафтового кваса">
+              <img src="img/kvast.jpg" width="360" height="576" alt="Сайт для любителей крафтового кваса">
             </a>
           </p>
           <a class="buttom" href="#">
