--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header class="main-header">
       <nav class="main-navigation">
           <a class="main-header-logo">
-        <img src="img/index-logo.svg" width="368" height="153"
+        <img src="img/nerds-logo.svg" width="160" height="65"
         alt="Логотип студии НЕРДС">
           </a>
         <ul class="site-navigation">
@@ -18,7 +18,7 @@
           <li><a href="contacts.html">Контакты</a></li>
         </ul>
         <ul class="user-navigation">
-          <li class="basket">Корзина</li>
+          <li class="basket" img src="img/nerds-logo.svg" width="160" height="65">Корзина</li>
         </ul>
       </nav>
     </header>
@@ -31,6 +31,7 @@
           <li><a class="button" href="presentation">Презентации</a></li>
         </ul>
       </section>
+    </main>
       <section>
         <b class="slogan">
           Мы маленькая, но гордая студия из Краснодара
@@ -47,7 +48,6 @@
         </ul>
       </div>
       </section>
-</main>
       <footer class="main-footer">
 <p class="contacts">
   Дизайн-Студия "Нердс" <br>
@@ -55,9 +55,10 @@
   Телефон: +7 (812) 275-75-75
   <div class="footer-social">
     <b> Давай дружить, это выгодно!</b>
-    <a class="social-button">href="#">Вконтакте</a>
-    <a class="social-button">href="#">Фейсбук</a>
-    <a class="social-button">href="#">Инстаграмм</a>
+    <a class="social-button" <img src="img/vk-icon.svg" width="26" height="15"
+      alt="Вконтакте" href="#">Вконтакте </a>
+    <a class="social-button" href="#">Фейсбук</a>
+    <a class="social-button" href="#">Инстаграмм</a>
   </div>
    </footer>
     <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
