--- a/catalog.html
+++ b/catalog.html
@@ -12,14 +12,15 @@
         alt="Логотип студии НЕРДС">
           </a>
         <ul class="site-navigation">
-          <li><a href="studio.html">Информация</a></li>
-          <li><a href="clients.html">Клиенты</a></li>
-          <li class="site-navigation-current"> <a href="catalog.html">
+          <li><a href="studio.html" aria-label="Информация о студии нердс">Информация</a></li>
+          <li><a href="clients.html" aria-label="Клиенты студии Нердс">Клиенты</a></li>
+          <li class="site-navigation-current"> <a href="catalog.html" aria-label="Перейти в магазин студии Нердс">
             Магазин</a></li>
-          <li><a href="contacts.html"> Контакты </a></li>
+          <li><a href="contacts.html" aria-label="Контактная информация"> Контакты </a></li>
         </ul>
         <ul class="user-navigation">
-          <li class="basket"> Корзина </li>
+          <img src="img/cart-icon.svg" width="15" height="20" alt="Корзина">
+          <a href="basket.html" aria-label="Перейти в корзину">Корзина</a>
         </ul>
       </nav>
     </header>
@@ -28,6 +29,31 @@
       <section class="filters">
         <h2 class="visually-hidden">Фильтр товаров</h2>
         <!-- Здесь будет форма -->
+        <form action="https:\\echo.htmlacademy.ru" method="post">
+        <h3>СТОИМОСТЬ<h3>
+       <label for="ot">От</label>
+     <input type="text" id="ot" name="ot"></input>
+     <label for="do">До</label>
+        <input type="text" id="do" name="do"></input>
+        <h3>СЕТКА<h3>
+          <label for="adaptive"><input type="radio" checked id="adaptive" name="grid" value="adaptive">Адаптивная</input></label>
+          <br>
+          <label for="fix"><input type="radio" id="fix" name="grid" value="fix">Фиксированна</input></label>
+          <br>
+          <label for="stretch"><input type="radio" id="stretch" name="grid" value="stretch">Резиновая</input></label>
+          <h3>ОСОБЕННОСТИ<h3>
+          <label for="slider"><input type="checkbox" id="slider" name="slider">Слайдер</input></label>
+            <br>
+          <label for="block"><input type="checkbox" id="block" name="block" >Блок преимуществ</input></label>
+            <br>
+          <label for="news"><input type="checkbox" id="news" name="news">Новости</input></label>
+            <br>
+          <label for="gallery"><input type="checkbox" id="gallery" name="Gallery">Галерея</input></label>
+          <br>
+          <label for="container"><input type="checkbox" id="container" name="container">Корзина</input></label>
+          <br>
+          <input type="submit" value="Показать">
+          </form>
       </section>
       <section class="catalog">
         <h2 class="visualy-hidden">Список сайтов</h2>
@@ -43,8 +69,10 @@
                <img src="img/sedona.jpg" width="360" height="576" alt="Информационный сайт для туристов SEDONA">
            </a>
          </p>
+         <button class="button">
            <a class="button" href="#">
              9 900 РУБ
+           </button>
            </a>
           </li>
           <li class="catalog-item">
@@ -59,8 +87,10 @@
                 <img src="img/pink.jpg" width="360" height="576" alt="Сайт приложения PINK">
               </a>
             </p>
-            <a class="button" href="#">
-              9 900 РУБ
+            <button class="button">
+              <a class="button" href="#">
+                9 900 РУБ
+              </button>
             </a>
           </li>
           <li class="catalog-item">
@@ -75,8 +105,10 @@
                 <img src="img/boroda.jpg" width="360" height="576" alt="Сайт барбершопа Бородинский">
               </a>
             </p>
-            <a class="buttom" href="#">
-              9 900 РУБ
+            <button class="button">
+              <a class="button" href="#">
+                9 900 РУБ
+              </button>
             </a>
           </li>
         <li class="catalog-item">
@@ -91,8 +123,10 @@
               <img src="img/mishki.jpg" width="360" height="576" alt="Милые штучки ручной работы для дома">
             </a>
           </p>
-          <a class="buttom" href="#">
-            9 900 РУБ
+          <button class="button">
+            <a class="button" href="#">
+              9 900 РУБ
+            </button>
           </a>
         </li>
         <li class="catalog-item">
@@ -107,8 +141,10 @@
               <img src="img/teacher.jpg" width="360" height="576" alt="Сайт для учебного заведения">
             </a>
           </p>
-          <a class="buttom" href="#">
-            9 900 РУБ
+          <button class="button">
+            <a class="button" href="#">
+              9 900 РУБ
+            </button>
           </a>
         </li>
         <li class="catalog-item">
@@ -123,8 +159,10 @@
               <img src="img/kvast.jpg" width="360" height="576" alt="Сайт для любителей крафтового кваса">
             </a>
           </p>
-          <a class="buttom" href="#">
-            9 900 РУБ
+          <button class="button">
+            <a class="button" href="#">
+              9 900 РУБ
+            </button>
           </a>
         </li>
       </ul>
