--- a/index.html
+++ b/index.html
@@ -12,23 +12,24 @@
         alt="Логотип студии НЕРДС">
           </a>
         <ul class="site-navigation">
-          <li><a href="studio.html">Информация</a></li>
-          <li><a href="clients.html">Клиенты</a></li>
-          <li><a href="shop.html">Магазин</a></li>
-          <li><a href="contacts.html">Контакты</a></li>
+          <li><a href="studio.html" aria-label="Информация о студии нердс">Информация</a></li>
+          <li><a href="clients.html" aria-label="Клиенты студии нердс">Клиенты</a></li>
+          <li><a href="catalog.html" aria-label="Войти в магазин студии">Магазин</a></li>
+          <li><a href="contacts.html" aria-label="Контактная информация">Контакты</a></li>
         </ul>
         <ul class="user-navigation">
-          <li class="basket" img src="img/nerds-logo.svg" width="160" height="65">Корзина</li>
-        </ul>
+          <img src="img/cart-icon.svg" width="15" height="20" alt="Корзина">
+          <a href="basket.html" aria-label="Перейти в корзину">Корзина</a>
+            </ul>
       </nav>
     </header>
     <main class="basic">
       <section class="amenities">
         <h2 class="visually-hidden"> Услуги</h2>
         <ul class="amenities-list">
-          <li><a class="button" href="web-sites.html">Веб-сайты</a></li>
-          <li><a class="button" href="aplicftions.html">Приложения</a></li>
-          <li><a class="button" href="presentation">Презентации</a></li>
+          <li><a class="button" href="web-sites.html" aria-label="Каталог сайтов">Веб-сайты</a></li>
+          <li><a class="button" href="aplicftions.html" aria-label="Каталог приложений">Приложения</a></li>
+          <li><a class="button" href="presentation" aria-label="Ознакомиться с презентациями">Презентации</a></li>
         </ul>
       </section>
     </main>
@@ -56,12 +57,11 @@
   <div class="footer-social">
     <b> Давай дружить, это выгодно!</b>
     <a class="social-button" <img src="img/vk-icon.svg" width="26" height="15"
-      alt="Вконтакте" href="#">Вконтакте </a>
-    <a class="social-button" href="#">Фейсбук</a>
-    <a class="social-button" href="#">Инстаграмм</a>
+      alt="Вконтакте" href="#" aria-label="Студия Нердс в контакте">Вконтакте </a>
+    <a class="social-button" href="#" arial-label="Студия Нердс в фейсбук">Фейсбук</a>
+    <a class="social-button" href="#" aria-label="Студия Нердс в Инстаграмме">Инстаграмм</a>
   </div>
    </footer>
     <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
-
   </body>
 </html>
