--- a/catalog.html
+++ b/catalog.html
@@ -31,27 +31,20 @@
         <!-- Здесь будет форма -->
         <form action="https:\\echo.htmlacademy.ru" method="post">
         <h3>СТОИМОСТЬ<h3>
-       <label for="ot">От</label>
-     <input type="text" id="ot" name="ot"></input>
-     <label for="do">До</label>
-        <input type="text" id="do" name="do"></input>
+       <label for="from">От</label>
+     <input type="text" id="from" name="ot"></input>
+     <label for="to">До</label>
+        <input type="text" id="to" name="do"></input>
         <h3>СЕТКА<h3>
-          <label for="adaptive"><input type="radio" checked id="adaptive" name="grid" value="adaptive">Адаптивная</input></label>
-          <br>
-          <label for="fix"><input type="radio" id="fix" name="grid" value="fix">Фиксированна</input></label>
-          <br>
-          <label for="stretch"><input type="radio" id="stretch" name="grid" value="stretch">Резиновая</input></label>
+          <label for="adaptive"><input type="radio" checked id="adaptive" name="grid" value="adaptive">Адаптивная</label>
+          <label for="fix"><input type="radio" id="fix" name="grid" value="fix">Фиксированна</label>
+          <label for="stretch"><input type="radio" id="stretch" name="grid" value="stretch">Резиновая</label>
           <h3>ОСОБЕННОСТИ<h3>
-          <label for="slider"><input type="checkbox" id="slider" name="slider">Слайдер</input></label>
-            <br>
-          <label for="block"><input type="checkbox" id="block" name="block" >Блок преимуществ</input></label>
-            <br>
-          <label for="news"><input type="checkbox" id="news" name="news">Новости</input></label>
-            <br>
-          <label for="gallery"><input type="checkbox" id="gallery" name="Gallery">Галерея</input></label>
-          <br>
-          <label for="container"><input type="checkbox" id="container" name="container">Корзина</input></label>
-          <br>
+          <label for="slider"><input type="checkbox" id="slider" name="slider">Слайдер</label>
+          <label for="block"><input type="checkbox" id="block" name="block" >Блок преимуществ</label>
+          <label for="news"><input type="checkbox" id="news" name="news">Новости</label>
+          <label for="gallery"><input type="checkbox" id="gallery" name="Gallery">Галерея</label>
+          <label for="container"><input type="checkbox" id="container" name="container">Корзина</label>
           <input type="submit" value="Показать">
           </form>
       </section>
