--- a/index.html
+++ b/index.html
@@ -12,31 +12,30 @@
         alt="Логотип студии НЕРДС">
           </a>
         <ul class="site-navigation">
-          <li><a href="studio.html" aria-label="Информация о студии нердс">Информация</a></li>
-          <li><a href="clients.html" aria-label="Клиенты студии нердс">Клиенты</a></li>
-          <li><a href="catalog.html" aria-label="Войти в магазин студии">Магазин</a></li>
-          <li><a href="contacts.html" aria-label="Контактная информация">Контакты</a></li>
+          <li><a href="studio.html">Информация</a></li>
+          <li><a href="clients.html">Клиенты</a></li>
+          <li><a href="catalog.html">Магазин</a></li>
+          <li><a href="contacts.html">Контакты</a></li>
         </ul>
         <ul class="user-navigation">
-          <img src="img/cart-icon.svg" width="15" height="20" alt="Корзина">
-          <a href="basket.html" aria-label="Перейти в корзину">Корзина</a>
+          <li><a href="basket.html">Корзина</a><li>
             </ul>
       </nav>
     </header>
     <main class="basic">
       <section class="amenities">
-        <h2 class="visually-hidden"> Услуги</h2>
+        <h2 class="visually-hidden">Услуги</h2>
         <ul class="amenities-list">
-          <li><a class="button" href="web-sites.html" aria-label="Каталог сайтов">Веб-сайты</a></li>
-          <li><a class="button" href="aplicftions.html" aria-label="Каталог приложений">Приложения</a></li>
-          <li><a class="button" href="presentation" aria-label="Ознакомиться с презентациями">Презентации</a></li>
+          <li><a class="button" href="web-sites.html">Веб-сайты</a></li>
+          <li><a class="button" href="aplicftions.html">Приложения</a></li>
+          <li><a class="button" href="presentation">Презентации</a></li>
         </ul>
       </section>
     </main>
       <section>
-        <b class="slogan">
+        <h2 class="slogan">
           Мы маленькая, но гордая студия из Краснодара
-        </b>
+        </h2>
         <p>Исповедуем принципы минимализма и чистоты. Ставим математический
           расчет превыше креатива. Работаем не покладая рук, как роботы.
         </p>
@@ -55,7 +54,7 @@
   Адрес: г. Санкт-петербург, ул. Б.Конюшенная, д.19/8
   Телефон: +7 (812) 275-75-75
   <div class="footer-social">
-    <b> Давай дружить, это выгодно!</b>
+    <h2> Давай дружить, это выгодно!</h2>
     <a class="social-button" <img src="img/vk-icon.svg" width="26" height="15"
       alt="Вконтакте" href="#" aria-label="Студия Нердс в контакте">Вконтакте </a>
     <a class="social-button" href="#" arial-label="Студия Нердс в фейсбук">Фейсбук</a>
