--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
       </section>
     </main>
       <section>
-        <h2 class="slogan">
+        <h3 class="slogan">
           Мы маленькая, но гордая студия из Краснодара
-        </h2>
+        </h3>
         <p>Исповедуем принципы минимализма и чистоты. Ставим математический
           расчет превыше креатива. Работаем не покладая рук, как роботы.
         </p>
@@ -54,12 +54,19 @@
   Адрес: г. Санкт-петербург, ул. Б.Конюшенная, д.19/8
   Телефон: +7 (812) 275-75-75
   <div class="footer-social">
-    <h2> Давай дружить, это выгодно!</h2>
-    <a class="social-button" <img src="img/vk-icon.svg" width="26" height="15"
-      alt="Вконтакте" href="#" aria-label="Студия Нердс в контакте">Вконтакте </a>
+    <h3> Давай дружить, это выгодно!</h3>
+    <a class="social-button" href="#" aria-label="Студия Нердс в контакте">Вконтакте </a>
     <a class="social-button" href="#" arial-label="Студия Нердс в фейсбук">Фейсбук</a>
     <a class="social-button" href="#" aria-label="Студия Нердс в Инстаграмме">Инстаграмм</a>
   </div>
+  <div class="modal-window">
+    <form action="https:\\echo.htmlacademy.ru" method="post">
+      <h3>Напишите нам!</h3>
+       <label for="username">Ваше имя: <input type="text" id="username" name="user-name"></label>
+      <label for="e-mail">Ваш E-mail: <input type="text" id="e-mail" name="e-mail"></label>
+      <label for="textarea">Текст сообщения:<textarea rows="10" id="textarea" cols="65">Начните вводить текст</textarea></label>
+      <input type="submit" value="Отправить">
+    </form>
    </footer>
     <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
   </body>
