--- a/catalog.html
+++ b/catalog.html
@@ -32,9 +32,9 @@
         <form action="https:\\echo.htmlacademy.ru" method="post">
         <h3>СТОИМОСТЬ<h3>
        <label for="from">От</label>
-     <input type="text" id="from" name="from"></input>
+     <input type="text" id="from" name="from">
      <label for="to">До</label>
-        <input type="text" id="to" name="to"></input>
+        <input type="text" id="to" name="to">
         <h3>СЕТКА<h3>
           <label for="adaptive"><input type="radio" checked id="adaptive" name="grid" value="adaptive">Адаптивная</label>
           <label for="fix"><input type="radio" id="fix" name="grid" value="fix">Фиксированна</label>
