--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <body>
     <header class="main-header">
       <nav class="main-navigation">
-          <a class="main-header-logo">
         <img src="img/nerds-logo.svg" width="160" height="65"
         alt="Логотип студии НЕРДС">
           </a>
@@ -64,7 +63,7 @@
       <h3>Напишите нам!</h3>
        <label for="username">Ваше имя: <input type="text" id="username" name="user-name"></label>
       <label for="e-mail">Ваш E-mail: <input type="text" id="e-mail" name="e-mail"></label>
-      <label for="textarea">Текст сообщения:<textarea rows="10" id="textarea" cols="65">Начните вводить текст</textarea></label>
+      <label for="textarea">Текст сообщения:<textarea rows="10" id="textarea" cols="65"></textarea></label>
       <input type="submit" value="Отправить">
     </form>
    </footer>
