--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <li><a href="contacts.html">Контакты</a></li>
         </ul>
         <ul class="user-navigation">
-          <li><a href="basket.html">Корзина</a><li>
+          <li><a href="basket.html">Корзина</a></li>
             </ul>
       </nav>
     </header>
