--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Нёрдс</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&amp;subset=cyrillic,cyrillic-ext" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="main-header">
       <nav class="main-navigation">
         <img src="img/nerds-logo.svg" width="160" height="65"
         alt="Логотип студии НЕРДС">
-          </a>
         <ul class="site-navigation">
           <li><a href="studio.html">Информация</a></li>
           <li><a href="clients.html">Клиенты</a></li>
@@ -54,19 +56,20 @@
   Телефон: +7 (812) 275-75-75
   <div class="footer-social">
     <h3> Давай дружить, это выгодно!</h3>
-    <a class="social-button" href="#" aria-label="Студия Нердс в контакте">Вконтакте </a>
-    <a class="social-button" href="#" arial-label="Студия Нердс в фейсбук">Фейсбук</a>
-    <a class="social-button" href="#" aria-label="Студия Нердс в Инстаграмме">Инстаграмм</a>
+    <a class="social-button" href="#">Вконтакте</a>
+    <a class="social-button" href="#">Фейсбук</a>
+    <a class="social-button" href="#">Инстаграмм</a>
   </div>
-  <div class="modal-window">
-    <form action="https:\\echo.htmlacademy.ru" method="post">
+   </footer>
+<div class="modal-window">
+    <form action="https://echo.htmlacademy.ru" method="post">
       <h3>Напишите нам!</h3>
        <label for="username">Ваше имя: <input type="text" id="username" name="user-name"></label>
       <label for="e-mail">Ваш E-mail: <input type="text" id="e-mail" name="e-mail"></label>
       <label for="textarea">Текст сообщения:<textarea rows="10" id="textarea" cols="65"></textarea></label>
       <input type="submit" value="Отправить">
     </form>
-   </footer>
+    </div>
     <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
   </body>
 </html>
