--- a/index.html
+++ b/index.html
@@ -23,6 +23,24 @@
             </ul>
       </nav>
     </header>
+    <!-- Здесь будет слайдер-->
+    <ul class="slide-switcher">
+      <li class="sl-radio"
+      <button class="slider-btn">
+        Слайд 1
+      </button>
+    </li>
+      <li class="sl-radio"
+      <button class="slider-btn">
+        Слайд 2
+      </button>
+    </li>
+      <li class="sl-radio"
+      <button class="slider-btn">
+        Слайд 3
+      </button>
+    </li>
+  </ul>
     <main class="basic">
       <section class="amenities">
         <h2 class="visually-hidden">Услуги</h2>
