--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </ul>
       </nav>
     </header>
-    <!-- Здесь будет слайдер-->
+    <!--слайдер-->
     <ul class="slide-switcher">
       <li class="sl-radio"
       <button class="slider-btn">
