--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Нёрдс</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&amp;subset=cyrillic,cyrillic-ext" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="main-header">
@@ -62,8 +65,7 @@
                <img src="img/sedona.jpg" width="360" height="576" alt="Информационный сайт для туристов SEDONA">
            </a>
          </p>
-         <button class="button">
-           <a class="button" href="#">
+         <button class="button-inner">
              9 900 РУБ
            </button>
            </a>
@@ -80,8 +82,7 @@
                 <img src="img/pink.jpg" width="360" height="576" alt="Сайт приложения PINK">
               </a>
             </p>
-            <button class="button">
-              <a class="button" href="#">
+            <button class="button-inner">
                 9 900 РУБ
               </button>
             </a>
@@ -98,8 +99,7 @@
                 <img src="img/boroda.jpg" width="360" height="576" alt="Сайт барбершопа Бородинский">
               </a>
             </p>
-            <button class="button">
-              <a class="button" href="#">
+            <button class="button-inner">
                 9 900 РУБ
               </button>
             </a>
@@ -116,8 +116,7 @@
               <img src="img/mishki.jpg" width="360" height="576" alt="Милые штучки ручной работы для дома">
             </a>
           </p>
-          <button class="button">
-            <a class="button" href="#">
+          <button class="button-inner">
               9 900 РУБ
             </button>
           </a>
@@ -134,8 +133,7 @@
               <img src="img/teacher.jpg" width="360" height="576" alt="Сайт для учебного заведения">
             </a>
           </p>
-          <button class="button">
-            <a class="button" href="#">
+          <button class="button-inner">
               9 900 РУБ
             </button>
           </a>
@@ -152,8 +150,7 @@
               <img src="img/kvast.jpg" width="360" height="576" alt="Сайт для любителей крафтового кваса">
             </a>
           </p>
-          <button class="button">
-            <a class="button" href="#">
+          <button class="button-inner">
               9 900 РУБ
             </button>
           </a>
