--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </ul>
       </nav>
     </header>
-    <!--слайдер-->
+    <!-- Здесь будет слайдер-->
     <ul class="slide-switcher">
       <li class="sl-radio"
       <button class="slider-btn">
@@ -43,19 +43,22 @@
   </ul>
     <main class="basic">
       <section class="amenities">
-        <h2 class="visually-hidden">Услуги</h2>
+        <h3 class="visually-hidden">Услуги</h3>
         <ul class="amenities-list">
-          <li><a class="button" href="web-sites.html">Веб-сайты</a></li>
-          <li><a class="button" href="aplicftions.html">Приложения</a></li>
-          <li><a class="button" href="presentation">Презентации</a></li>
+          <li><a class="button left" href="web-sites.html">Веб-сайты</a></li>
+          <li><a class="button center" href="aplications.html">Приложения</a></li>
+          <li><a class="button right" href="presentation">Презентации</a></li>
         </ul>
       </section>
     </main>
       <section>
-        <h3 class="slogan">
-          Мы маленькая, но гордая студия из Краснодара
-        </h3>
+        <h2 class="slogan">
+          Мы маленькая, но гордая
+          <br>
+          дизайн-студия из Краснодара.
+        </h2>
         <p>Исповедуем принципы минимализма и чистоты. Ставим математический
+          <br>
           расчет превыше креатива. Работаем не покладая рук, как роботы.
         </p>
         <div class="static">
