--- a/catalog.html
+++ b/catalog.html
@@ -22,8 +22,7 @@
           <li><a href="contacts.html" aria-label="Контактная информация"> Контакты </a></li>
         </ul>
         <ul class="user-navigation">
-          <img src="img/cart-icon.svg" width="15" height="20" alt="Корзина">
-          <a href="basket.html" aria-label="Перейти в корзину">Корзина</a>
+          <li><a href="basket.html">Корзина</a></li>
         </ul>
       </nav>
     </header>
@@ -32,17 +31,17 @@
       <section class="filters">
         <h2 class="visually-hidden">Фильтр товаров</h2>
         <!-- Здесь будет форма -->
-        <form action="https:\\echo.htmlacademy.ru" method="post">
-        <h3>СТОИМОСТЬ<h3>
+        <form action="https://echo.htmlacademy.ru" method="post">
+        <h3>СТОИМОСТЬ</h3>
        <label for="from">От</label>
      <input type="text" id="from" name="from">
      <label for="to">До</label>
         <input type="text" id="to" name="to">
-        <h3>СЕТКА<h3>
-          <label for="adaptive"><input type="radio" checked id="adaptive" name="grid" value="adaptive">Адаптивная</label>
-          <label for="fix"><input type="radio" id="fix" name="grid" value="fix">Фиксированна</label>
-          <label for="stretch"><input type="radio" id="stretch" name="grid" value="stretch">Резиновая</label>
-          <h3>ОСОБЕННОСТИ<h3>
+        <h3>СЕТКА</h3>
+          <label for="adaptive"><input type="radio"  checked id="adaptive" name="grid" value="adaptive">Адаптивная</label>
+          <label for="fix"><input type="radio"  id="fix" name="grid" value="fix">Фиксированна</label>
+          <label for="stretch"><input type="radio"  id="stretch" name="grid" value="stretch">Резиновая</label>
+          <h3>ОСОБЕННОСТИ</h3>
           <label for="slider"><input type="checkbox" id="slider" name="slider">Слайдер</label>
           <label for="block"><input type="checkbox" id="block" name="block" >Блок преимуществ</label>
           <label for="news"><input type="checkbox" id="news" name="news">Новости</label>
@@ -52,14 +51,12 @@
           </form>
       </section>
       <section class="catalog">
-        <h2 class="visualy-hidden">Список сайтов</h2>
+        <h3 class="visualy-hidden">Список сайтов</h3>
         <ul class="catalog-list">
           <li class="catalog-item">
-            <h3>
               <a href="catalog-item.html">
               <span class="catalog-item-title">SEDONA</span>
               </a>
-           </h3>
            <p class="catalog-item-image">
              <a href="catalog-item.html">
                <img src="img/sedona.jpg" width="360" height="576" alt="Информационный сайт для туристов SEDONA">
@@ -68,7 +65,6 @@
          <button class="button-inner">
              9 900 РУБ
            </button>
-           </a>
           </li>
           <li class="catalog-item">
             <h3>
@@ -85,7 +81,6 @@
             <button class="button-inner">
                 9 900 РУБ
               </button>
-            </a>
           </li>
           <li class="catalog-item">
             <h3>
@@ -102,7 +97,6 @@
             <button class="button-inner">
                 9 900 РУБ
               </button>
-            </a>
           </li>
         <li class="catalog-item">
           <h3>
@@ -119,7 +113,6 @@
           <button class="button-inner">
               9 900 РУБ
             </button>
-          </a>
         </li>
         <li class="catalog-item">
           <h3>
@@ -136,7 +129,6 @@
           <button class="button-inner">
               9 900 РУБ
             </button>
-          </a>
         </li>
         <li class="catalog-item">
           <h3>
@@ -153,7 +145,6 @@
           <button class="button-inner">
               9 900 РУБ
             </button>
-          </a>
         </li>
       </ul>
       <ul class="pagination-list">
