--- a/catalog.html
+++ b/catalog.html
@@ -154,6 +154,9 @@
       </ul>
     </section>
   </main>
+  <sectiom class="map">
+    <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A82b0ee8d5038b91e38a1fc5a9e2a29f10c4b180550fc187bb78447ab67a99ef9&amp;source=constructor" width="1084" height="400" frameborder="0"></iframe>
+  </section>
   <footer class="main-footer">
   <p class="contacts">
   Дизайн-Студия "Нердс" <br>
