--- a/index.html
+++ b/index.html
@@ -61,14 +61,34 @@
           <br>
           расчет превыше креатива. Работаем не покладая рук, как роботы.
         </p>
-        <div class="static">
+        <h4 class="list-works-title"> Выполняем заказы на разработку:</h4>
+        <ul class="list-work">
+          <li class="position-1">
+          <p>Вэб-сайтов любой сложности</p>
+        </li>
+        <li class="position-2">
+        <p>Мобильных приложений для IOS и Android</p>
+      </li>
+      <li class="position-3">
+        <p>Слайдшоу и видео для корпоративных презентаций</p>
+      </li>
+    </ul>
+    <h4 class="static-title">
           C 2004 года любим точность во всем:
-          <ul>
-            <li>Уровень самоотдачи:146%</li>
-          <li>Соблюдение сроков:100%</li>
-          <li>Минимальная предоплата:50%</li>
-        </ul>
-      </div>
+        </h4>
+        <tr class="table">
+          <td class="order-1">Уровень самоотдачи</td><!--146%-->
+          <td class="order-2">Соблюдение сроков:</td><!--100%-->
+          <td class="order-2">Минимальная предоплата:</td><!--50%-->
+      </section>
+      <article class="logotype">
+        <img src="img/htmlacademy.png" width="260" height="180">
+        <img src="img/borodinski.png" width="260" height="180">
+        <img src="img/pink.png" width="260" height="180">
+        <img src="img/mishka.png" width="260" height="180">
+    </article>
+      <sectiom class="map">
+        <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A82b0ee8d5038b91e38a1fc5a9e2a29f10c4b180550fc187bb78447ab67a99ef9&amp;source=constructor" width="1084" height="400" frameborder="0"></iframe>
       </section>
       <footer class="main-footer">
 <p class="contacts">
